[package]
name = "ffms2"
version = "0.3.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = "FFI bindings to ffms2"
repository = "https://github.com/rust-av/ffms2-rs"
edition = "2021"
license = "MIT"

[dependencies]
ffms2-sys = { path = "./ffms2-sys"}
thiserror = "1.0.50"
#ffmpeg-the-third = { git = "https://github.com/shssoichiro/ffmpeg-the-third" }

[dev-dependencies]
clap = { version = "^4.5", features = ["derive"] }

[workspace]
members = ["ffms2-sys"]
