[package]
name = "ffms2"
version = "0.3.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = "FFI bindings to ffms2"
repository = "https://github.com/rust-av/ffms2-rs"
edition = "2021"
license = "MIT"
include = ["/src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
ffms2-sys = "0.3.0"
cfg-if = "1.0.4"
paste = "1.0.15"
ffmpeg-the-third = "5.0.0"

[dev-dependencies]
structopt = "0.3.26"

[workspace]
members = ["ffms2-sys"]

[patch.crates-io]
ffms2-sys = { path = "./ffms2-sys" }
