[package]
name = "ffms2-sys"
version = "0.3.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = "FFI bindings to ffms2"
repository = "https://github.com/rust-av/ffms2-rs"
edition = "2021"
license = "MIT"

[features]
static = []

[build-dependencies]
bindgen = "0.72.1"
metadeps = "1.1.2"

[package.metadata.pkg-config]
ffms2 = "2.40"
